FABJ-484: Fix checkstyle failure
Also eliminate a bunch of other compile warnings for reasons such
as unchecked conversions and unusued imports.

Change-Id: Ic46d333a7ebf6dbdf772b41d68249fb4ac81e9fb
Signed-off-by: Mark S. Lewis <mark_lewis@uk.ibm.com>